# go-proto-gql

./: .gitignore  BUILD  README.md  WORKSPACE  go.mod
pb/: BUILD.bazel
plugin/: BUILD.bazel
protoc-gen-gogqlgen/: BUILD.bazel
protoc-gen-gql/: BUILD.bazel
protoc-gen-gqlgencfg/: BUILD.bazel
