load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "gql_proto",
    srcs = ["gql.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:descriptor_proto"],
)

# go_proto_library(
#     name = "gql_go_proto",
#     importpath = "github.com/danielvladco/go-proto-gql/pb",
#     proto = ":gql_proto",
#     visibility = ["//visibility:public"],
# )

# As long as we do not have https://github.com/gogo/protobuf
# set up for automatically compiling gql.proto, we use the
# precompiled one. 
# The default google/protobuf compiler will result in type clashes!

go_library(
    name = "gql_go_proto",
    srcs = ["gql.pb.go"],
    importpath = "github.com/danielvladco/go-proto-gql/pb",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gogo_protobuf//proto:go_default_library",
        "@com_github_gogo_protobuf//protoc-gen-gogo/descriptor:go_default_library",
        "@com_github_gogo_protobuf//protoc-gen-gogo/generator:go_default_library",
        "@com_github_gogo_protobuf//types:go_default_library",
    ],
)

go_library(
    name = "go_default_library",
    srcs = ["types.go"],
    importpath = "github.com/danielvladco/go-proto-gql/pb",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@io_bazel_rules_go//proto/wkt:any_go_proto",
    ],
)
