load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/danielvladco/go-proto-gql/protoc-gen-gogqlgen",
    visibility = ["//visibility:private"],
    deps = [
        "//plugin:go_default_library",
        "@com_github_gogo_protobuf//proto:go_default_library",
        "@com_github_gogo_protobuf//protoc-gen-gogo/generator:go_default_library",
        "@com_github_gogo_protobuf//vanity:go_default_library",
    ],
)

go_binary(
    name = "protoc-gen-gogqlgen",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
